--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="exchange_button_submit">SUBMIT</string>
     <string name="appFlow_label_screenTitle">Currency Converter</string>
     <string name="exchange_label_exchangeFee">Swap fee: %1$s\%% (%2$s swaps so far)</string>
-    <string name="exchange_msg_byArrowsome"><![CDATA[Made with <3 by Arrowsome]]></string>
+    <string name="exchange_msg_byArrowsome"><![CDATA[Made with <3]]></string>
     <string name="app_version">version: 0.2.0</string>
     <string name="about_us">About us</string>
     <string name="appFlow_label_aboutUsScreenTitle">About Us</string>
